--- a/Uppgift4/ArvOchAbstraktion/ArvOchAbstraktion.csproj
+++ b/Uppgift4/ArvOchAbstraktion/ArvOchAbstraktion.csproj
@@ -1,3 +1,4 @@
+
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
@@ -5,4 +6,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Klasser\Klasser.csproj" />
+  </ItemGroup>
+
 </Project>
+
+
